addition of README.md file for anyone looking for a description of the repo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 /* CSS has been reorganized to follow basic flow of the HTML that it is linked with 
 to make it easier to read */
-/* font family was applied to all aspects and cutting out extra lines of code */
+/* font family was applied to all aspects and cutting out extra lines of */
 
 * {
     box-sizing: border-box;
